--- a/Transformice.vcxproj
+++ b/Transformice.vcxproj
@@ -183,6 +183,10 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="getRandom.h" />
+    <ClInclude Include="formWall.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="packages\AllegroDeps.1.10.0.0\build\native\AllegroDeps.targets" Condition="Exists('packages\AllegroDeps.1.10.0.0\build\native\AllegroDeps.targets')" />
