Start mouse movement

--- a/Transformice.vcxproj
+++ b/Transformice.vcxproj
@@ -178,7 +178,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Origem.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -186,6 +186,7 @@
   <ItemGroup>
     <ClInclude Include="getRandom.h" />
     <ClInclude Include="formWall.h" />
+    <ClInclude Include="moveMouse.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
