--- a/Transformice.vcxproj.filters
+++ b/Transformice.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="moveMouse.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
+    <ClInclude Include="destroyDisplay.h">
+      <Filter>Arquivos de Cabeçalho</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
