--- a/Transformice.vcxproj.filters
+++ b/Transformice.vcxproj.filters
@@ -27,7 +27,7 @@
     <ClInclude Include="moveMouse.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
-    <ClInclude Include="destroyDisplay.h">
+    <ClInclude Include="createForms.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
   </ItemGroup>
