--- a/Transformice.vcxproj
+++ b/Transformice.vcxproj
@@ -184,7 +184,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="destroyDisplay.h" />
+    <ClInclude Include="createForms.h" />
     <ClInclude Include="getRandom.h" />
     <ClInclude Include="formWall.h" />
     <ClInclude Include="moveMouse.h" />
