--- a/Transformice.vcxproj.filters
+++ b/Transformice.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="movement.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
+    <ClInclude Include="validator.h">
+      <Filter>Arquivos de Cabeçalho</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
